Update requirements with new package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@
 torch==2.3.1
 torchvision==0.18.1
 numpy==1.26.4
-opencv-python==4.8.1.78
+opencv-python-headless==4.10.0.84
 pillow==10.0.1
 
 # Face Recognition and Detection
 transformers==4.35.2
 
 # Vector Database and Search
-faiss-cpu==1.7.4
+faiss-cpu==1.8.0
 
 # Web Framework and API
 fastapi==0.104.1
